# ezra

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.userbot  README.md  database.py  docker-compose.yml  llm_service.py  main.py  pyproject.toml  run-pod.sh  run-podman.sh  userbot.py
data/: ezra.db
